# subscription-saas

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: subscriptions.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: SubscriptionForm.jsx  SubscriptionList.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
